tests/NormalTests/paczka2/big_fuzzy/32965686.err
Error in line 6: CK31jZW A383 19,9
Error in line 3: 8q8z S200 46,0
Error in line 16: shzRntS S200 5S,6
Error in line 15: A383 A383 55,9
Error in line 28: CK31jZW S128 33,6
Error in line 35: 8q8z S200 63,2
Error in line 44: A383 S200 63,9
Error in line 31: YnJuX A383 29,8
Error in line 33: 1FarOxpAH S128 43,0
Error in line 56: shzRnt3 S200 2,4
Error in line 61: YnJuX S778 48,0
Error in line 63: YnJuX A383 71,7
Error in line 80: 8q8z S200 11,1
Error in line 82: 8q8z S128 60,6
Error in line 78: A383 S200 30,5
Error in line 109: shzRnt3 S200 53,4
Error in line 111: 9Glug S200 36,8
Error in line 105: CK31jZW A383 60,8
Error in line 99: 8q8z S128 113,6
Error in line 112: shzRnt3 S128 97,3
Error in line 120: YnJuX A383 466,4
Error in line 123: YnJuX S128 54,2
Error in line 133: 9Glug S128 54,9
Error in line 137: 9Glug S200 63,6
Error in line 152: 9Glug S128 3,1
Error in line 158: A383 S128 87,4
Error in line 159: A383 S200 49,4
Error in line 160: A383 S128 95,8
Error in line 163: YnJuX S128 89,1
Error in line 165: 1FarOxpAH S128 4,9
Error in line 162: A383 S200 29,4
Error in line 156: 9Glug S778 22,1
Error in line 151: shzRnt3 S778 33,6
Error in line 184: CK31jZW S128 875,9
Error in line 185: A383 S128 81,9
Error in line 193: YnJuX A383 26,0
Error in line 198: 8q8z A383 67,7
Error in line 207: 8q8z S200 44,1
Error in line 203: 9Glug S128 46,4
Error in line 182: shzRnt3 S778 70,4
Error in line 226: A383 S200 90,9
Error in line 228: CK31jZW S128 23,4
Error in line 232: CK31jZW A383 -1,2
Error in line 241: A383 A383 4:,8
Error in line 231: CK31jZW A383 37,9
Error in line 239: 8q8z S778 40,8
Error in line 250: 8q8z 778 11,1
